[package]
name = "cpp_map"
description = "A simple C++ std::map emulator"
version = "0.1.0"
authors = ["eadf"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/eadf/cpp_map.rs"
keywords = ["cpp", "map"]
exclude = [
    "img/*",
    "idea/*",
    ".github/*",
    "examples/input_data/*"
]

[features]
# used for debugging purposes
console_debug = []

[dependencies]
thiserror = "1.0"

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
lto = true
